[project]
name = "research-paper-fetcher"
version = "0.1.3"
description = ""
authors = [
    {name = "harshita795",email = "yadavharshita261303@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests (>=2.30,<3.0)"
]

[tool.poetry]
packages = [{include = "research_paper_fetcher", from = "src"}]

[tool.poetry.scripts]
get-papers-list = "research_paper_fetcher.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
